Fixed the words overlapping with footer in words landing page

--- a/web/app/user/sass/pages/_wordsFeatured.scss
+++ b/web/app/user/sass/pages/_wordsFeatured.scss
@@ -15,6 +15,8 @@
          .homepage-content {
             height: auto !important;
             min-height: 200px;
+            margin-top: 1em;
+            padding-bottom: 17em;
          }
 
          .page-header {
